<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Phototask-slider</string>
    <string name="hello_world">Hello world!</string>


    <string name="title_activity_detail_view">Detailansicht</string>
    <string name="detail_name">No Name</string>
    <string name="title_activity_fullscreen__image__slider">Gespeicherte Bilder</string>
    <string name="title_activity_upload_">Bild hinzufügen</string>
    <string name="title_activity_view_comments">Nachrichten</string>
    <string name="title_activity_add_comment">AddCommentActivity</string>

   <!-- Home-Menue -->
    <string name="new_contact">Neuer Kontakt</string>
    <string name="contact_list">Kontakte</string>
    <string name="user">Benutzer anlegen</string>
    <string name="action_settings">Settings</string>

    <!-- Detail-menue -->
    <string name="send_task">Senden</string>
    <string name="message_list">Kommentare</string>
    <string name="home">Zurück</string>
    <string name="add_pic">+ Bild</string>

    <string name="title_activity_contact">Kontaktliste</string>
    <string name="title_activity_new_task">Neuen Auftrag anlegen</string>
    <string name="title_activity_mail_">Mail_Activity</string>

    <string name="spinner_title">Addresse auswählen</string>


</resources>
