<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.christianjandl.phototask.phototask.DetailView">

    <item android:id="@+id/send_task"
        android:title="@string/send_task"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/add_pic"
        android:title="@string/add_pic"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/contact_list"
        android:title="@string/contact_list"
        />
    <item
        android:id="@+id/new_contact"
        android:title="@string/new_contact"
        />
    <item
        android:id="@+id/message_list"
        android:title="@string/message_list"
        />
    <item
        android:id="@+id/home"
        android:title="@string/home"

        />

</menu>
